<resources>
    <string name="app_name">PracticalTest02</string>
    <string name="server">server</string>
    <string name="server_port">server_port</string>
    <string name="connect">connect</string>
    <string name="client">client</string>
    <string name="address">address</string>
    <string name="port">port</string>
    <string name="money_type">Money Type</string>
    <string name="get_value">Get value</string>
</resources>