<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PracticalTest02MainActivity">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/server"
            android:textSize="30sp"
            android:id="@+id/ServerTextView"/>

        <EditText
            android:id="@+id/PortEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ServerTextView"
            android:layout_alignParentStart="true"
            android:ems="7"
            android:hint="@string/server_port"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ServerTextView"
            android:layout_alignParentEnd="true"
            android:ems="7"
            android:text="@string/connect"
            android:id="@+id/ConnectButton"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/client"
            android:textSize="30sp"
            android:id="@+id/ClientTextView"
            android:layout_below="@id/PortEditText"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/address"
            android:layout_below="@id/ClientTextView"
            android:layout_alignParentStart="true"
            android:hint="@string/address"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/portClient"
            android:layout_below="@id/ClientTextView"
            android:layout_alignParentEnd="true"
            android:hint="@string/port"
            android:ems="7"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/address"
            android:id="@+id/money_type"
            android:hint="@string/money_type"
            android:ems="7"/>

        <Button
            android:id="@+id/get_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/portClient"
            android:layout_alignParentEnd="true"
            android:ems="14"
            android:text="@string/get_value" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/response"
            android:ems="20"
            android:layout_below="@id/get_value"
            android:layout_centerHorizontal="true"/>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>